[tool.poetry]
name = "docsthebox"
version = "0.1.0"
description = "Hack The Box Machines to Notion Database for Writeups"
authors = ["GoProSlowYo <68455785+goproslowyo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
types-requests = "^2.31.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
